@@ -4,7 +4,7 @@ Known Bugs:
 V0.5dev:
   - If vBars are used together with ICON_BLOCK_FILLED on the same screen and
     that icon is implemented as a custom char, it sometimes is replaced with
-    a non full block from the vBar.
+    a non full block from the vBar. Affected drivers: IOWarrior, CwLinux
   - On Solaris the mtc_s16209x driver fails to compile. Configure LCDproc to
     exclude this driver.
   - On FreeBSD drivers using the pthread library are known not to work.
